--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Welcome to Tea Cozy :)</title>
-    <meta name="description" content="tea" />
+    <meta name="description" content="Visit Tea Cozy in Bergen for the best selection of premium teas. From traditional tea blends to unique and exotic flavors, we have something for everyone. Stop by today and cozy up with a cup of tea.">
+    <meta name="keywords" content="tea, tea shop, Bergen, premium tea, traditional tea, exotic tea, cozy up, cup of tea">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./resources/css/style.css" />
-    <!-- <link rel="stylesheet" href="./resources/css/style.css" /> -->
   </head>
 
   <header>
@@ -32,7 +33,6 @@
 
   <body>
     <div class="white-border"></div>
-
     <div class="container-our-mission">
       <!-- instead of headers, use span or p -->
       <p>
@@ -44,60 +44,62 @@
         >
       </p>
       <!-- <h2>Our Mission</h2>
-      <h4>
-        Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch,
-        Fair Trade, Organic Tea
-      </h4> -->
+        <h4>
+          Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch,
+          Fair Trade, Organic Tea
+        </h4> -->
     </div>
 
-    <div class="container-monthly-tea">
-      <h2>Tea of the Month</h2>
-      <h4>What's Steeping at The Tea Cozy</h4>
+    <section class="wood-background">
+      <div class="container-monthly-tea">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy 🍵</h4>
 
-      <div class="monthly-tea marquee">
-        <div class="image">
-          <img
-            src="./resources/images/img-berryblitz.jpg"
-            alt="Fall Berry Blitz Tea"
-          />
-          <p>Fall Berry Blitz Tea</p>
-          <br />
-        </div>
+        <div class="monthly-tea marquee">
+          <div class="image">
+            <img
+              src="./resources/images/img-berryblitz.jpg"
+              alt="Fall Berry Blitz Tea"
+            />
+            <p>Fall Berry Blitz Tea</p>
+            <br />
+          </div>
 
-        <div class="image">
-          <img
-            src="./resources/images/img-spiced-rum.jpg"
-            alt="Spiced Rum Tea"
-          />
-          <p>Spiced Rum Tea</p>
-          <br />
-        </div>
+          <div class="image">
+            <img
+              src="./resources/images/img-spiced-rum.jpg"
+              alt="Spiced Rum Tea"
+            />
+            <p>Spiced Rum Tea</p>
+            <br />
+          </div>
 
-        <div class="image">
-          <img src="./resources/images/img-donut.jpg" alt="Seasonal Donuts" />
-          <p>Seasonal Donuts</p>
-          <br />
-        </div>
+          <div class="image">
+            <img src="./resources/images/img-donut.jpg" alt="Seasonal Donuts" />
+            <p>Seasonal Donuts</p>
+            <br />
+          </div>
 
-        <div class="image">
-          <img
-            src="./resources/images/img-myrtle-ave.jpg"
-            alt="Myrtle Ave Tea"
-          />
-          <p>Myrtle Ave Tea</p>
-          <br />
-        </div>
+          <div class="image">
+            <img
+              src="./resources/images/img-myrtle-ave.jpg"
+              alt="Myrtle Ave Tea"
+            />
+            <p>Myrtle Ave Tea</p>
+            <br />
+          </div>
 
-        <div class="image">
-          <img
-            src="./resources/images/img-bedford-bizarre.jpg"
-            alt="Bedford Bizarre Tea"
-          />
-          <p>Bedford Bizarre Tea</p>
-          <br />
+          <div class="image">
+            <img
+              src="./resources/images/img-bedford-bizarre.jpg"
+              alt="Bedford Bizarre Tea"
+            />
+            <p>Bedford Bizarre Tea</p>
+            <br />
+          </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <div class="container-locations">
       <h2 style="text-align: center; padding-bottom: 15px; margin: 0">
